2007-07-10  Lapo Calamandrei <calamandrei@gmail.com>

	* {16x16,22x22}/apps/system-software-update.* : redesign.

2007-07-09  Jakub Steiner <jimmac@ximian.com>

	* input-gaming: generic controller icon for gaming devices

2007-07-09  Lapo Calamandrei <calamandrei@gmail.com>

	* 16x16/status/audio-volume* : restyling.
	* Various missing 24x24 icons added.
	* */actions/edit-find* : a try at the binocular metaphor for find,
		which doesn't clashes with zoom icons.

2007-07-08  Andreas Nilsson <nisses.mail@home.se>

	* {32x32,scalable}/actions/mail-reply-all* : added missing sizes.

2007-07-08  Lapo Calamandrei <calamandrei@gmail.com>
	
	* */actions/tools-check-spelling.* : new icons.
	* 22x22/actions/format-text-direction* : new icons.

2007-07-07  Andreas Nilsson <nisses.mail@home.se>

	* {32x32,scalable}/actions/mail-forward* : added missing sizes.
	* {32x32,scalable}/actions/mail-reply-sender* : fixed the appearence 
		a bit.

2007-07-07  Lapo Calamandrei <calamandrei@gmail.com>

	* {32x32,scalable}/actions/format-text-direction* : new icons.
	* Orange pencils in edit-find-replace and accessories-text-editor in 
		big sizes (Fixes #453639).

2007-07-06  Lapo Calamandrei <calamandrei@gmail.com>

	* {32x32,scalable}/devices/network-wireless.svg : not the best icons 
		ever made, but better then nothing... (Fixes #409620)

2007-07-05  Luca Ferretti <elle.uca@libero.it>

	* 24x24/emotes/Makefile.am: really fix it: monkey, not mokney :-)

2007-07-05  Jakub Steiner <jimmac@ximian.com>

	* 24x24/emotes/Makefile.am: fix typo

2007-07-05  Jakub Steiner <jimmac@ximian.com>

	* {32x32,scalable}/devices/network-wired: tiny tweaks in the
		female connector area.

2007-07-04  Lapo Calamandrei <calamandrei@gmail.com>

	* {16x16,22x22}/devices/network-wireless.* : a try a at new design.
	* changed emblem-system to blue.
	* */actions/insert-object.* : new icons by Sebastian Kraft.
	* 32x32/devices/network-wired.* : another Sebastian Kraft contribution.
