@@ -1,3 +1,7 @@
+2007-07-10  Luca Ferretti  <elle.uca@libero.it>
+
+	* index.theme.in: add existing 16x16/emblems
+
 2007-07-10  Lapo Calamandrei <calamandrei@gmail.com>
 
 	* {16x16,22x22}/apps/system-software-update.* : redesign.
